--- a/demo3/src/main/resources/application.properties
+++ b/demo3/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.application.name=demo3
-spring.data.mongodb.uri=mongodb://localhost:27017/bookdb
+spring.data.mongodb.uri=mongodb://mongo:27017/bookdb
