--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -7,9 +7,15 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
   rules:
-    - host: booky.local
-      http:
+    - http:
         paths:
+          - path: /api/books
+            pathType: Prefix
+            backend:
+              service:
+                name: backend
+                port:
+                  number: 8080
           - path: /
             pathType: Prefix
             backend:
