--- a/kubernetes/backend-deplotment.yaml
+++ b/kubernetes/backend-deplotment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: backend
   namespace: booky
+  labels:
+    app: backend
 spec:
   replicas: 1
   selector:
@@ -15,21 +17,10 @@ spec:
     spec:
       containers:
         - name: backend
-          image: hristina123/hristina123/backend-booky:latest
+          image: hristina123/backend-booky:latest
           ports:
             - containerPort: 8080
-          env:
-            - name: SPRING_DATA_MONGODB_URI
-              value: mongodb://mongo.booky.svc.cluster.local:27017/booky
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: backend
-  namespace: booky
-spec:
-  selector:
-    app: backend
-  ports:
-    - port: 8080
-      targetPort: 8080
+          envFrom:
+            - configMapRef:
+                name: booky-config
+
