--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -6,8 +6,10 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
+  ingressClassName: nginx
   rules:
-    - http:
+    - host: booky.local
+      http:
         paths:
           - path: /api/books
             pathType: Prefix
