--- a/kubernetes/backend-service.yaml
+++ b/kubernetes/backend-service.yaml
@@ -9,4 +9,5 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
-  type: ClusterIP
+      nodePort: 32080   # choose between 30000–32767
+  type: NodePort
